tests/invalid/if_condition_function_value/main.py
def helper(x: int) -> int:
    return x + 1


def run_case() -> None:
    if helper:
        print("bad")


if __name__ == "__main__":
    run_case()
